Fix video display on mobile part 1

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -361,13 +361,20 @@ header {
         box-sizing: border-box;
     }
     #suppliers {
-        font-size: 80%;
-        padding: 25px;
-        box-sizing: border-box;
+        width: 100%;
+        height: 0;
+        padding-bottom: 56.25%;
+        position: relative;
+    }
+
+    #suppliers iframe {
+        position: absolute;
+        width: 100%;
+        height: 100%;
     }
     #footer {
         font-size: 80%;
-        height: 75px;
+        height: fit-content;
     }
    
 }
